adusting target branches in travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: output
-  target_branch: master
+  target_branch: gh-pages
   on:
-    branch: gh-pages
+    branch: dev
