first go at travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,11 @@ deploy:
   target_branch: gh-pages
   on:
     branch: dev
+
+
+
+
+after_success:
+      "curl -u $FTP_USER:$FTP_PASSWORD -T index.html sftp://45.56.100.117/var/www/html/wedding.reeher-palmer.net/public_html"
+
+#    "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
