--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ install:
 - pip install -r requirements.txt
 script:
 - make publish
+
+sudo: required
+dist: trusty
+
 deploy:
   provider: pages
   skip_cleanup: true
@@ -17,9 +21,9 @@ deploy:
     branch: dev
 
 
-
-
 after_success:
-      "curl -u $FTP_USER:$FTP_PASSWORD -T index.html sftp://45.56.100.117/var/www/html/wedding.reeher-palmer.net/public_html"
+      "curl -u $FTP_USER:$FTP_PASSWORD -T /home/travis/build/klreeher/wedding-pelican/content sftp://45.56.100.117/var/www/html/wedding.reeher-palmer.net/public_html --verbose"
 
 #    "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
+
+
