--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ deploy:
 
 
 after_success:
-      "curl -u $FTP_USER:$FTP_PASSWORD -T /home/travis/build/klreeher/wedding-pelican/content sftp://45.56.100.117/var/www/html/wedding.reeher-palmer.net/public_html --verbose"
+      "rsync -rovc -u $FTP_USER:$FTP_PASSWORD /home/travis/build/klreeher/wedding-pelican/content/ deploy@wedding.reeher-palmer.net:var/www/html/wedding.reeher-palmer.net/public_html"
 
 #    "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
 
