--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ script:
 - make publish
 
 sudo: required
-dist: trusty
 
+dist: trusty
 deploy:
   provider: pages
   skip_cleanup: true
@@ -21,8 +21,33 @@ deploy:
     branch: dev
 
 
+
+
 after_success:
-      "rsync -rovc -u $FTP_USER:$FTP_PASSWORD /home/travis/build/klreeher/wedding-pelican/content/ deploy@wedding.reeher-palmer.net:var/www/html/wedding.reeher-palmer.net/public_html"
+
+orion = "wedding.reeher-palmer.net"
+
+local_content = "/home/travis/build/klreeher/wedding-pelican/connect"
+remote_content = "var/www/html/wedding.reeher-palmer.net/public_html"
+
+transport = paramiko.Transport((orion,22))
+transport.connect(username = $FTP_USER, password = $FTP_PASSWORD)
+stfp = paramiko.SFTPClient.from_transport(transport)
+
+print('local_content '+local_content)
+print('remote_content '+remote_content)
+
+sftp.put(local_content, remote_content)
+
+transport.close()
+ 
+
+#      "curl -u $FTP_USER:$FTP_PASSWORD -T /home/travis/build/klreeher/wedding-pelican/content sftp://45.56.100.117/ --verbose"
+
+#    "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
+
+
+#      "rsync -rovc -u $FTP_USER:$FTP_PASSWORD /home/travis/build/klreeher/wedding-pelican/content/ deploy@wedding.reeher-palmer.net:var/www/html/wedding.reeher-palmer.net/public_html"
 
 #    "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
 
