try paramiko again

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,26 +20,9 @@ deploy:
   on:
     branch: dev
 
-
-
-
 after_success:
+  - python deploy.py
 
-orion = "wedding.reeher-palmer.net"
-
-local_content = "/home/travis/build/klreeher/wedding-pelican/connect"
-remote_content = "var/www/html/wedding.reeher-palmer.net/public_html"
-
-transport = paramiko.Transport((orion,22))
-transport.connect(username = $FTP_USER, password = $FTP_PASSWORD)
-stfp = paramiko.SFTPClient.from_transport(transport)
-
-print('local_content '+local_content)
-print('remote_content '+remote_content)
-
-sftp.put(local_content, remote_content)
-
-transport.close()
  
 
 #      "curl -u $FTP_USER:$FTP_PASSWORD -T /home/travis/build/klreeher/wedding-pelican/content sftp://45.56.100.117/ --verbose"
