--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,15 @@ deploy:
   on:
     branch: dev
 
+deployRemote:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --verbose $TRAVIS_BUILD_DIR/output/ $FTP_USER@wedding.reeher-palmer.net:var/www/html/wedding.reeher-palmer.net/public_html
+  on:
+    branch: gh-pages
+
 after_success:
-  - python deploy.py
+  
 
  
 
