--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ cache: pip
 install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
+addons:
+  ssh_known_hosts:
+  - 45.56.100.117
+
 script:
 - make publish
 
